repos/makepy/contents/test/fail/Indent.rules
all:
    print("OK")
  print("OK")